--- a/style.css
+++ b/style.css
@@ -3427,3 +3427,5 @@ p{
 line-height: 1.2em;}
 .colls:hover h2{color:#fff;}
 .colls:hover p{color:#fff;}
+.ply-reading {font-size: 10px !important;}
+.white-play-icon{width: 18px;}
