--- a/input.css
+++ b/input.css
@@ -49,3 +49,4 @@ p{
     .colls:hover p{color:#fff;}
     .ply-reading {font-size: 10px !important;}
     .white-play-icon{width: 18px;}
+    .ri-close-fill {margin-right: 13px;}
