--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,10 @@
 
 
 body {
-    font-family: "Inter", serif;
+    font-family: "Inter", sans-serif;
     color: var(--dark);
+    background: url(../images/hello-agent-bg.png) no-repeat bottom right;
+    background-size: 36%;
 }
 
 
@@ -29,6 +31,10 @@ body {
 
 .bg-primary {
     background-color: var(--green);
+}
+
+.border-primary {
+    border-color: var(--green);
 }
 
 .text-primary {
@@ -43,9 +49,18 @@ body {
     color: var(--dark-teal);
 }
 
+.text-dark {
+    color: var(--dark);
+}
 
-#sidebar {
-    height: 100vh !important;
+.rounded-s-none {
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+}
+
+.rounded-e-none {
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
 }
 
 .ai-voic-creation-col {
@@ -82,23 +97,34 @@ body {
     color: #fff;
 }
 
-#settingsSubmenu {
-    padding-left: 3rem !important;
-}
-
-
 .colls:hover p {
     color: #fff;
 } 
 
-.ply-reading {
-    font-size: 10px !important;
-}
-
-.white-play-icon {
-    width: 18px;
-}
 
 .ri-close-fill {
     margin-right: 13px;
+}
+
+.sidebar--collapsed .sidebar__menu-text {
+    padding: 0;
+}
+
+
+
+/* Media Queries */
+
+@media (min-width: 1200px) {
+    body {
+        background-attachment: fixed;
+    }
+}
+
+@media (min-width: 1900px) {
+    #sidebar {
+        width: 20rem;
+    }
+    #sidebar.w-16 {
+        width: 4rem;
+    }
 }
