--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* Importing Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
 
 /* Variables */
 :root {
@@ -99,6 +99,10 @@ body {
 
 .theme-toggle__active img {
     filter: brightness(0) invert(1);
+}
+
+.faq-toggle--active .faq-icon {
+    transform: rotate(180deg);
 }
 
 
