--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,10 @@ body {
     color: #fff;
 } 
 
+.colls:hover h2 {
+    color: var(--light-teal);
+} 
+
 
 .sidebar--collapsed .sidebar__menu-text {
     padding: 0;
@@ -104,7 +108,6 @@ body {
 .faq-toggle--active .faq-icon {
     transform: rotate(180deg);
 }
-
 
 /* Media Queries */
 @media (min-width: 1200px) {
