--- a/src/styles.css
+++ b/src/styles.css
@@ -84,18 +84,13 @@ body {
     border-bottom-right-radius: 0 !important;
 }
 
-.profile-card:hover h2 {
+.colls:hover p, .profile-card:hover h2,.profile-card--selected h2 {
     color: #fff;
 }
-
-.colls:hover p {
-    color: #fff;
-} 
 
 .colls:hover h2 {
     color: var(--light-teal);
 } 
-
 
 .sidebar--collapsed .sidebar__menu-text {
     padding: 0;
@@ -124,7 +119,7 @@ body {
     background-color: rgba(255, 255, 255, 0.06);
 }
 
-.dark .text-dark, .dark .text-black {
+.dark .text-dark, .dark .text-black, .dark #hamburgerBtn {
     color: #fff;
 }
 
