Hamburger menu color updates

--- a/src/styles.css
+++ b/src/styles.css
@@ -171,6 +171,10 @@ body {
     border: 0 !important;
 }
 
+.dark .faq-icon path {
+    fill: var(--dark-teal)
+}
+
 
 /* Media Queries */
 @media (min-width: 1200px) {
