Divided Big JS file into smaller modules for easier future changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -139,6 +139,12 @@ table.dataTable>tbody>tr:nth-child(even) {
     background: #14B8A640;
 }
 
+.dt-column-title {
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+}
+
 .dt-scroll-head {
     border-top-right-radius: 0.5rem;
 }
